調整手機版排序欄位顯示台幣、原幣文字

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -30,7 +30,7 @@
                 <li><a href="#" class="c-tab__item " target="_self" title="淨值風險" data-tab-target="tab-4" data-filter-switch-columns="netWorthRiskTable" data-filter-switch="#uid-template-netWorthRisk">淨值風險</a></li>
                 <li><a href="#" class="c-tab__item " target="_self" title="交易狀況" data-tab-target="tab-5" data-filter-switch-columns="tradeTable" data-filter-switch="#uid-template-trade">交易狀況</a></li>
                 <li><a href="#" class="c-tab__item " target="_self" title="基本資料" data-tab-target="tab-6" data-filter-switch-columns="baseTable" data-filter-switch="#uid-template-base">基本資料</a></li>
-                <li>@*<a href="#" class="c-tab__item " target="_self" title="查無商品" data-tab-target="tab-7" data-filter-empty="true">查無商品</a>*@</li>
+                @*<li><a href="#" class="c-tab__item " target="_self" title="查無商品" data-tab-target="tab-7" data-filter-empty="true">查無商品</a></li>*@
             </ul>
             <div class="c-tab__collapse">
                 <a href="#" class="c-tab__switch"></a>
@@ -83,23 +83,23 @@
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
                                     <option value="幣別低至高" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-asc">幣別低至高</option>
-                                    <option value="1個月績效高至低" data-sorting-column="MonthlyReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1個月績效高至低</option>
-                                    <option value="1個月績效低至高" data-sorting-column="MonthlyReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1個月績效低至高</option>
-                                    <option value="3個月績效高至低" data-sorting-column="ThreeMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">3個月績效高至低</option>
-                                    <option value="3個月績效低至高" data-sorting-column="ThreeMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">3個月績效低至高</option>
-                                    <option value="6個月績效高至低" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">6個月績效高至低</option>
-                                    <option value="6個月績效低至高" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">6個月績效低至高</option>
-                                    <option value="1年績效高至低" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1年績效高至低</option>
-                                    <option value="1年績效低至高" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1年績效低至高</option>
+                                    <option value="1個月原幣績效高至低" data-sorting-column="MonthlyReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1個月原幣績效高至低</option>
+                                    <option value="1個月原幣績效低至高" data-sorting-column="MonthlyReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1個月原幣績效低至高</option>
+                                    <option value="3個月原幣績效高至低" data-sorting-column="ThreeMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">3個月原幣績效高至低</option>
+                                    <option value="3個月原幣績效低至高" data-sorting-column="ThreeMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">3個月原幣績效低至高</option>
+                                    <option value="6個月原幣績效高至低" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">6個月原幣績效高至低</option>
+                                    <option value="6個月原幣績效低至高" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">6個月原幣績效低至高</option>
+                                    <option value="1年原幣績效高至低" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1年原幣績效高至低</option>
+                                    <option value="1年原幣績效低至高" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1年原幣績效低至高</option>
 
-                                    <option value="1個月績效高至低" data-sorting-column="MonthlyReturnMarketPriceTWD.Value" data-sorting-class="is-desc">1個月績效高至低</option>
-                                    <option value="1個月績效低至高" data-sorting-column="MonthlyReturnMarketPriceTWD.Value" data-sorting-class="is-asc">1個月績效低至高</option>
-                                    <option value="3個月績效高至低" data-sorting-column="ThreeMonthReturnMarketPriceTWD.Value" data-sorting-class="is-desc">3個月績效高至低</option>
-                                    <option value="3個月績效低至高" data-sorting-column="ThreeMonthReturnMarketPriceTWD.Value" data-sorting-class="is-asc">3個月績效低至高</option>
-                                    <option value="6個月績效高至低" data-sorting-column="SixMonthReturnMarketPriceTWD.Value" data-sorting-class="is-desc">6個月績效高至低</option>
-                                    <option value="6個月績效低至高" data-sorting-column="SixMonthReturnMarketPriceTWD.Value" data-sorting-class="is-asc">6個月績效低至高</option>
-                                    <option value="1年績效高至低" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1年績效高至低</option>
-                                    <option value="1年績效低至高" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1年績效低至高</option>
+                                    <option value="1個月台幣績效高至低" data-sorting-column="MonthlyReturnMarketPriceTWD.Value" data-sorting-class="is-desc">1個月台幣績效高至低</option>
+                                    <option value="1個月台幣績效低至高" data-sorting-column="MonthlyReturnMarketPriceTWD.Value" data-sorting-class="is-asc">1個月台幣績效低至高</option>
+                                    <option value="3個月台幣績效高至低" data-sorting-column="ThreeMonthReturnMarketPriceTWD.Value" data-sorting-class="is-desc">3個月台幣績效高至低</option>
+                                    <option value="3個月台幣績效低至高" data-sorting-column="ThreeMonthReturnMarketPriceTWD.Value" data-sorting-class="is-asc">3個月台幣績效低至高</option>
+                                    <option value="6個月台幣績效高至低" data-sorting-column="SixMonthReturnMarketPriceTWD.Value" data-sorting-class="is-desc">6個月台幣績效高至低</option>
+                                    <option value="6個月台幣績效低至高" data-sorting-column="SixMonthReturnMarketPriceTWD.Value" data-sorting-class="is-asc">6個月台幣績效低至高</option>
+                                    <option value="1年台幣績效高至低" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-desc">1年台幣績效高至低</option>
+                                    <option value="1年台幣績效低至高" data-sorting-column="OneYearReturnMarketPriceOriginalCurrency.Value" data-sorting-class="is-asc">1年台幣績效低至高</option>
                                 </select>
                             </div>
                         </div>
@@ -144,23 +144,23 @@
                                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-asc">最新淨值低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
                                     <option value="幣別低至高" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-asc">幣別低至高</option>
-                                    <option value="1個月績效高至低" data-sorting-column="MonthlyReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">1個月績效高至低</option>
-                                    <option value="1個月績效低至高" data-sorting-column="MonthlyReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">1個月績效低至高</option>
-                                    <option value="3個月績效高至低" data-sorting-column="ThreeMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">3個月績效高至低</option>
-                                    <option value="3個月績效低至高" data-sorting-column="ThreeMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">3個月績效低至高</option>
-                                    <option value="6個月績效高至低" data-sorting-column="SixMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">6個月績效高至低</option>
-                                    <option value="6個月績效低至高" data-sorting-column="SixMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">6個月績效低至高</option>
-                                    <option value="1年績效高至低" data-sorting-column="OneYearReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">1年績效高至低</option>
-                                    <option value="1年績效低至高" data-sorting-column="OneYearReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">1年績效低至高</option>
+                                    <option value="1個月原幣績效高至低" data-sorting-column="MonthlyReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">1個月原幣績效高至低</option>
+                                    <option value="1個月原幣績效低至高" data-sorting-column="MonthlyReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">1個月原幣績效低至高</option>
+                                    <option value="3個月原幣績效高至低" data-sorting-column="ThreeMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">3個月原幣績效高至低</option>
+                                    <option value="3個月原幣績效低至高" data-sorting-column="ThreeMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">3個月原幣績效低至高</option>
+                                    <option value="6個月原幣績效高至低" data-sorting-column="SixMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">6個月原幣績效高至低</option>
+                                    <option value="6個月原幣績效低至高" data-sorting-column="SixMonthReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">6個月原幣績效低至高</option>
+                                    <option value="1年原幣績效高至低" data-sorting-column="OneYearReturnNetValueOriginalCurrency.Value" data-sorting-class="is-desc">1年原幣績效高至低</option>
+                                    <option value="1年原幣績效低至高" data-sorting-column="OneYearReturnNetValueOriginalCurrency.Value" data-sorting-class="is-asc">1年原幣績效低至高</option>
 
-                                    <option value="1個月績效高至低" data-sorting-column="MonthlyReturnNetValueTWD.Value" data-sorting-class="is-desc">1個月績效高至低</option>
-                                    <option value="1個月績效低至高" data-sorting-column="MonthlyReturnNetValueTWD.Value" data-sorting-class="is-asc">1個月績效低至高</option>
-                                    <option value="3個月績效高至低" data-sorting-column="ThreeMonthReturnNetValueTWD.Value" data-sorting-class="is-desc">3個月績效高至低</option>
-                                    <option value="3個月績效低至高" data-sorting-column="ThreeMonthReturnNetValueTWD.Value" data-sorting-class="is-asc">3個月績效低至高</option>
-                                    <option value="6個月績效高至低" data-sorting-column="SixMonthReturnNetValueTWD.Value" data-sorting-class="is-desc">6個月績效高至低</option>
-                                    <option value="6個月績效低至高" data-sorting-column="SixMonthReturnNetValueTWD.Value" data-sorting-class="is-asc">6個月績效低至高</option>
-                                    <option value="1年績效高至低" data-sorting-column="OneYearReturnNetValueTWD.Value" data-sorting-class="is-desc">1年績效高至低</option>
-                                    <option value="1年績效低至高" data-sorting-column="OneYearReturnNetValueTWD.Value" data-sorting-class="is-asc">1年績效低至高</option>
+                                    <option value="1個月台幣績效高至低" data-sorting-column="MonthlyReturnNetValueTWD.Value" data-sorting-class="is-desc">1個月台幣績效高至低</option>
+                                    <option value="1個月台幣績效低至高" data-sorting-column="MonthlyReturnNetValueTWD.Value" data-sorting-class="is-asc">1個月台幣績效低至高</option>
+                                    <option value="3個月台幣績效高至低" data-sorting-column="ThreeMonthReturnNetValueTWD.Value" data-sorting-class="is-desc">3個月台幣績效高至低</option>
+                                    <option value="3個月台幣績效低至高" data-sorting-column="ThreeMonthReturnNetValueTWD.Value" data-sorting-class="is-asc">3個月台幣績效低至高</option>
+                                    <option value="6個月台幣績效高至低" data-sorting-column="SixMonthReturnNetValueTWD.Value" data-sorting-class="is-desc">6個月台幣績效高至低</option>
+                                    <option value="6個月台幣績效低至高" data-sorting-column="SixMonthReturnNetValueTWD.Value" data-sorting-class="is-asc">6個月台幣績效低至高</option>
+                                    <option value="1年台幣績效高至低" data-sorting-column="OneYearReturnNetValueTWD.Value" data-sorting-class="is-desc">1年台幣績效高至低</option>
+                                    <option value="1年台幣績效低至高" data-sorting-column="OneYearReturnNetValueTWD.Value" data-sorting-class="is-asc">1年台幣績效低至高</option>
                                 </select>
                             </div>
                         </div>
