Update：Highcharts tickInterval

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
@@ -338,6 +338,7 @@
                     tickPosition: 'inside',
                     tickWidth: 0.5,
                     tickLength: 7,
+                    tickInterval: 24 * 3600 * 1000 * 7,
                     labels: {
                         formatter: function () {
                             const format = {
